--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -1,13 +1,58 @@
 ---
-
 - hosts: all
+  become: yes  # Выполнять задачи с привилегиями sudo
   gather_facts: no
   tasks:
 
-    - apt:
+    - name: Обновить кеш APT и установить python3-pip
+      apt:
         name: python3-pip
         update_cache: yes
-        cache_valid_time: 604800 # 1 week
+        cache_valid_time: 604800 # 1 неделя
 
-    - pip:
+    - name: Установить зависимости для Docker
+      apt:
+        name:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - gnupg
+          - lsb-release
+        state: present
+
+    - name: Добавить официальный GPG-ключ Docker
+      ansible.builtin.shell: |
+        curl -fsSL https://download.docker.com/linux/$(lsb_release -si | tr '[:upper:]' '[:lower:]')/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+      args:
+        creates: /usr/share/keyrings/docker-archive-keyring.gpg
+
+    - name: Добавить репозиторий Docker
+      ansible.builtin.shell: |
+        echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/$(lsb_release -si | tr '[:upper:]' '[:lower:]') $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+      args:
+        creates: /etc/apt/sources.list.d/docker.list
+
+    - name: Обновить кеш APT и установить Docker
+      apt:
+        name:
+          - docker-ce
+          - docker-ce-cli
+          - containerd.io
+        state: present
+        update_cache: yes
+
+    - name: Убедиться, что Docker запущен
+      systemd:
+        name: docker
+        state: started
+        enabled: yes
+
+    - name: Добавить текущего пользователя в группу Docker
+      user:
+        name: "{{ ansible_user }}"
+        groups: docker
+        append: yes
+
+    - name: Установить Python-модуль docker через pip
+      pip:
         name: docker
