--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,27 @@
+# file: docker-compose.yml
 version: "3"
 
 services:
-  app:
-    build: .
-    image: hexletcomponents/devops-example-app
-
-  caddy:
+  app: # Имя сервиса
     build:
+      # Контекст для сборки образа,
+      # в данном случае, текущая директория
+      context: .
+      # Имя Docker-файла из которого будет собран образ
+      dockerfile: Dockerfile
+    volumes:
+      - .:/app
+      - /app/node_modules
+    ports:
+      - 3000:3000
+
+  caddy: # Веб-сервер
+    build: # Находится внутри services/caddy
       context: .
       dockerfile: services/caddy/Dockerfile
-    image: hexletcomponents/devops-example-caddy
+    volumes:
+      - .:/app
+      - ./services/caddy/Caddyfile:/etc/caddy/Caddyfile
+    ports:
+      - 80:80
+      - 443:443
